# CMake Build for Crackpot
# Basic Usage:
#   On Windows: use CMake GUI to generate project files. 
#   On Unix: ccmake PPCPP_DIRECTORY
# 
CMAKE_MINIMUM_REQUIRED(VERSION 2.6.0 FATAL_ERROR)
PROJECT(ppcpp)
ENABLE_TESTING()
SET(CMAKE_VERBOSE_MAKEFILE ON)

# Version
SET(PPCPP_VERSION_MAJOR 1)
SET(PPCPP_VERSION_MINOR 2)
SET(PPCPP_VERSION_SUBMINOR 0)
SET(PPCPP_VERSION "${PPCPP_VERSION_MAJOR}.${PPCPP_VERSION_MINOR}.${PPCPP_VERSION_SUBMINOR}")
#SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_SOURCE_DIR})


ADD_DEFINITIONS(-DCMAKE_BUILD)
# Subdirectories for building
add_subdirectory(ppcpp)
#add_subdirectory(docs)
